# autonomous_rover

./: .gitignore  README.md  ros2.repos
src/control/: package.xml  setup.cfg  setup.py
src/control/control/: cam.py  keyboard.py  trivial.py
src/rover_bringup/: package.xml  setup.py
src/rover_bringup/launch/: rover.launch.py
src/rover_nav/: CMakeLists.txt  package.xml  setup.py
src/rover_nav/launch/: nav.launch.py
src/rover_nav/params/: nav2_params.yaml
