<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.0.0</version>
  <description>bringup package that launches the neccesary waveshare ugv_rover dependencies</description>
  <maintainer email="aleksantari@gmail.com">santari</maintainer>
  <license>Apache 2.0</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- using exec_depend because I'm only running executables for the packages -->
  <exec_depend>ugv_bringup</exec_depend>
  <exec_depend>ugv_description</exec_depend>
  <exec_depend>ugv_base_node</exec_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_complementary_filter</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
